name:                ninety-nine-problems
version:             1.0
synopsis:            99 Problems in Haskell
homepage:            https://github.com/mkovacs/99-haskell
author:              Mate J Kovacs
maintainer:          mkovaxx@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library

test-suite problems-01-10
  default-language:  Haskell2010
  build-depends:     base ==4.*
                   , QuickCheck >=2.7 && <3
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src
  main-is:           Problems-01-10.hs
